<resources>
    <string name="app_name">SaveApp</string>
    <string name="content">Content</string>
    <string name="priority">Priority</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="close">X</string>
    <string name="update">Update</string>
    <string name="add_title">Add Title</string>
    <string name="add_content">Add Content</string>
    />
</resources>