<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".AddUpdateActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200sp"
            android:text="@string/close"
             />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_title"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="20sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_content"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:padding="20sp" />

    <TextView
        android:id="@+id/text_view_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/priority"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <NumberPicker
        android:id="@+id/number_picker_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.appcompat.widget.LinearLayoutCompat>